--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,9 @@ body {
     margin: 0;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-weight: 200;
     margin: 1rem 0 2.5rem 0;
 }
@@ -55,7 +57,7 @@ h3 {
 /** Utilidades **/
 
 .text-center {
-    text-align: center; 
+    text-align: center;
 }
 
 .mt-5 {
@@ -82,9 +84,9 @@ h3 {
 }
 
 @media (min-width: 768px) {
-  .header {
-    min-height: 45rem;
-  }
+    .header {
+        min-height: 45rem;
+    }
 }
 
 .contenido-header {
@@ -106,10 +108,10 @@ h3 {
 }
 
 @media (min-width: 768px) {
-  .barra-superior {
-    flex-direction: row;
-    justify-content: space-between;
-  }
+    .barra-superior {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
 .nombre-sitio span {
@@ -131,9 +133,9 @@ h3 {
 }
 
 @media (min-width: 768px) {
-  .navegacion {
-    flex-direction: row;
-  }
+    .navegacion {
+        flex-direction: row;
+    }
 }
 
 .slogan {
@@ -156,24 +158,70 @@ h3 {
 }
 
 @media (min-width: 768px) {
-  .slogan {
-    text-align: right;
-    align-self: flex-end;
-  }
+    .slogan {
+        text-align: right;
+        align-self: flex-end;
+    }
 
-  .slogan h1 {
-    font-size: 3rem;
-  }
+    .slogan h1 {
+        font-size: 3rem;
+    }
 }
 
 @media (min-width: 1024px) {
-  .slogan {
-    max-width: 40rem;
-  }
+    .slogan {
+        max-width: 40rem;
+    }
 }
 
 
-.navegacion .link, .slogan p {
+.navegacion .link,
+.slogan p {
     color: rgba(255, 255, 255, 0.85);
 }
 
+/**SOBRE NOSOTROS**/
+
+.sobre-nosotros {
+    padding: 4rem 0;
+    text-align: center;
+}
+
+.sobre-nosotros-contenido {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+
+.img-sobre-nosotros {
+  min-height: 28rem;
+  background-image:
+    linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.98) 0%,
+      rgba(255, 255, 255, 0.90) 10%,
+      rgba(255, 255, 255, 0.55) 22%,
+      rgba(255, 255, 255, 0) 50%
+    ),
+    url("../08-arquitectura/img/nosotros.jpg");
+  background-size: cover;
+  background-position: center;
+  margin-top: -1rem;
+}
+
+
+.texto-sobre-nosotros {
+    max-width: 65ch;
+    margin-inline: auto;
+}
+
+.texto-sobre-nosotros h2 {
+    margin-bottom: 0;
+}
+
+.texto-sobre-nosotros p {
+    margin-bottom: 0rem;
+    color: #333;
+    position: relative;
+    z-index: 2;
+}
