--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ h3 {
 
 .seccion-modelos__header h2 {
     text-align: center;
-    font-weight: bold;
+    font-weight: 400;
     font-size: clamp(2.6rem, 7vw, 5rem);
     line-height: 1.05;
     padding-bottom: clamp(1rem, 4vw, 2rem);
@@ -240,14 +240,16 @@ h3 {
 }
 
 .modelo h3 {
-    margin: 0 0 1rem 0;
+    margin: 2rem 0 1rem 0;
     text-align: center;
     font-size: clamp(2rem, 8vw, 3rem);
-    font-weight: 400;
+    font-weight: 200;
+    
 }
 
 .modelo p {
     padding-top: max(1.5rem, 3vw);
+    margin-bottom: .5rem;
 }
 
 .modelo img {
@@ -256,3 +258,25 @@ h3 {
     object-fit: cover;
     margin: 0 auto;
 }
+
+.modelos-eyebrow {
+  font-size: 0.85rem;          /* chico */
+  letter-spacing: 0.2em;       /* aire */
+  text-transform: uppercase;   /* editorial */
+  color: #777;                 /* bajo contraste */
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.modelos-descripcion {
+    color: #777;
+    text-align: center;
+    letter-spacing: 0.1em;
+}
+
+
+
+/**Footer**/
+
+
+
